# ActiveLoopClosure

./: README.md
FAST_LIO_SLAM/FAST-LIO/: CMakeLists.txt
FAST_LIO_SLAM/FAST-LIO/Log/: fast_lio_time_log.csv  mat_out.txt  mat_pre.txt
FAST_LIO_SLAM/FAST-LIO/config/: avia_rot.yaml  mid360.yaml
FAST_LIO_SLAM/FAST-LIO/launch/: mapping_avia.launch  mapping_avia_rot.launch
FAST_LIO_SLAM/FAST-LIO/rviz_cfg/: loam_livox.rviz
FAST_LIO_SLAM/FAST-LIO/src/: laserMapping.cpp  livox_rot.cpp  preprocess.cpp  preprocess.h
FAST_LIO_SLAM/SC-PGO/: CMakeLists.txt
FAST_LIO_SLAM/SC-PGO/LOG/: odom_poses.txt  odometry.txt  optimized_poses.txt  times.txt
FAST_LIO_SLAM/SC-PGO/include/aloam_velodyne/: common.h
FAST_LIO_SLAM/SC-PGO/launch/: fastlio_ouster64.launch  fastlio_ouster64_highFre.launch
FAST_LIO_SLAM/SC-PGO/rviz_cfg/: aloam_velodyne.rviz
FAST_LIO_SLAM/SC-PGO/src/: fuse_odom_pub.cpp  laserMapping.cpp  laserOdometry.cpp  laserPosegraphOptimization.cpp
OSM_global_planning/cpp_path/output/: output.txt  output_interpolated.txt
OSM_global_planning/csvfile/scene5_v1/: link.csv  node.csv
OSM_global_planning/osmfile/: scene5_v1.osm
autonomous_exploration_development_environment/: README.md
autonomous_exploration_development_environment/src/loam_interface/launch/: loam_interface.launch
autonomous_exploration_development_environment/src/loam_interface/src/: loamInterfac1e.cpp
autonomous_exploration_development_environment/src/local_planner/: CMakeLists.txt
autonomous_exploration_development_environment/src/local_planner/launch/: local_planner copy.launch  local_planner.launch
autonomous_exploration_development_environment/src/local_planner/src/: localPlanner.cpp  pathFollower.cpp
autonomous_exploration_development_environment/src/sensor_scan_generation/src/: sensorScanGeneration.cpp
autonomous_exploration_development_environment/src/terrain_RF/: CMakeLists.txt  package.xml
autonomous_exploration_development_environment/src/terrain_RF/config/: randomF.yaml
autonomous_exploration_development_environment/src/terrain_RF/launch/: terrain_RF.launch
autonomous_exploration_development_environment/src/terrain_RF/rviz/: road_RF.rviz
autonomous_exploration_development_environment/src/terrain_RF/src/: terrain.cpp
autonomous_exploration_development_environment/src/terrain_analysis/: CMakeLists.txt
autonomous_exploration_development_environment/src/terrain_analysis/launch/: terrain_analysis.launch
autonomous_exploration_development_environment/src/terrain_analysis/src/: terrainAnalysis.cpp
autonomous_exploration_development_environment/src/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
autonomous_exploration_development_environment/src/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
autonomous_exploration_development_environment/src/vehicle_simulator/launch/: system_indoor.launch  system_osm_follow.launch  system_real_robot.launch  system_real_robot_chunkmap.launch  vehicle_simulator.launch
autonomous_exploration_development_environment/src/vehicle_simulator/rviz/: vehicle_simulator.rviz  vehicle_simulator_orin.rviz
gps_follow/: CMakeLists.txt  package.xml
gps_follow/include/: gpsTools.hpp  laplacian_graph.hpp  rppSolver.hpp
gps_follow/launch/: active_loop.launch  ini_gps.launch
gps_follow/msg/: NavSatFixArray.msg
gps_follow/osm_path/: scene5_sea_osm_gps_v1.txt  scene5_sea_osm_interpolated_v1.txt
gps_follow/rviz/: 1.rviz
gps_follow/src/: active_loop_laplacian.cpp  laplacian_graph.cpp  rppSolver.cpp  waypoint_gps.cpp
gps_follow/srv/: gpsTomap.srv
osmplanner/: CMakeLists.txt  package.xml
osmplanner/config/: octo_livox.yaml
osmplanner/include/osmplanner/: grid.h  grid_waypoint.h  osmplanner_gw.h
osmplanner/include/osmplanner/DBSCAN/: DBSCAN_precomp.h  DBSCAN_simple.h
osmplanner/launch/: grid.launch  livox_octomap.launch  osmplanner.launch
osmplanner/rviz/: road.rviz
osmplanner/src/: grid_gw.cpp  osmPlanner_gw.cpp
